[gd_scene load_steps=3 format=3 uid="uid://ctb5crx6r7s0k"]

[ext_resource type="Script" path="res://Scenes/Simple/audio.gd" id="1_eoj1m"]
[ext_resource type="Texture2D" uid="uid://cwovuk5ctd1s4" path="res://Resources/Icons/volume-high-solid.svg" id="2_ojboy"]

[node name="Audio" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -29.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_eoj1m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_ojboy")
expand_mode = 1
stretch_mode = 5

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[connection signal="drag_ended" from="VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
